force-app/main/default/objects/ampi__xx_Risk_Action__c/ampi__xx_Risk_Action__c.object-meta.xml
<CustomObject>
    <description>Capture and track mitigation actions for impending risks or response actions for risk incidents.</description>
    <label>Risk Action</label>
    <nameField>
        <label>Risk Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>