force-app/main/default/objects/ampi__xx_Risk_Action__c/fields/ampi__xx_Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship that relates a Risk Action to a Contact.</description>
    <label>Responsible Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risk Actions</relationshipLabel>
    <relationshipName>Risk_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>