force-app/main/default/objects/ampi__xx_Risk_Action__c/fields/ampi__xx_Risk_Action_Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Action_Category__c</fullName>
    <description>Picklist field used to specify the category of a Risk Action</description>
    <inlineHelpText>Is this risk action to prevent a risk from occurring or is it a response to an occurred incident?</inlineHelpText>
    <label>Risk Action Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mitigation</fullName>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>