force-app/main/default/objects/ampi__xx_Risk_Action__c/fields/ampi__xx_Risk_Action_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Action_Description__c</fullName>
    <description>Field used to capture the description of a Risk Action</description>
    <label>Risk Action Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>