force-app/main/default/objects/ampi__xx_Risk_Action__c/fields/ampi__xx_Risk_Action_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Action_End_Date__c</fullName>
    <description>Date field used to specify the end date of a Risk Action.</description>
    <label>Risk Action End Date</label>
    <type>Date</type>
</CustomField>