force-app/main/default/objects/ampi__xx_Risk_Action__c/fields/ampi__xx_Risk_Action_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Action_Start_Date__c</fullName>
    <description>Date field used to specify the start date of a Risk Action</description>
    <label>Risk Action Start Date</label>
    <type>Date</type>
</CustomField>