force-app/main/default/objects/ampi__xx_Risk_Action__c/fields/ampi__xx_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Status__c</fullName>
    <description>Picklist field used to specify the status of a Risk Action</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>